# resume-vacancy-matching

./: README.md  docker-compose.yml  pyproject.toml
notebooks/: baseline.ipynb
notebooks/experiments/: baseline.ipynb  baseline_milvus.ipynb  bertopic.ipynb  bm25_sbert_ranking.ipynb  encoder_benchmark.ipynb  faiss_reranker.ipynb  sem_search_finetuning.ipynb  vacancy_tree.ipynb
src/: gradio_app.py  vacancy_searcher.py
